--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,7 @@ html {
 #slider {
     margin-top: 46px;
     padding-top: 50%;
-    background: url('../assets/img/slider/chicago.jpg') top center / cover no-repeat;
+    background: url('../img/slider/chicago.jpg') top center / cover no-repeat;
     position: relative;
     
 }
